Remove output of LaTeX table render script

--- a/analysis/utils/latex/r_to_latex.ipynb
+++ b/analysis/utils/latex/r_to_latex.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -16,10 +16,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "outputs": [],
    "source": [
-    "def lul(file_name_in):\n",
+    "def create_latex_table(file_name_in):\n",
     "    df = pd.read_csv(file_name_in).astype(float)\n",
     "    file_name_in = file_name_in.split(\"/\")[-1]\n",
     "    file_name = file_name_in.split(\".\")[0] + \".tex\"\n",
@@ -42,39 +42,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_212821/4062287807.py:13: FutureWarning: In future versions `DataFrame.to_latex` is expected to utilise the base implementation of `Styler.to_latex` for formatting and rendering. The arguments signature may therefore change. It is recommended instead to use `DataFrame.style.to_latex` which also contains additional functionality.\n",
-      "  df.to_latex(file_name, column_format=\">{\\\\bfseries}c|\" + (len(df.columns)-1) * \"c\", multicolumn_format=\"c\", caption=\"TODO\", label=\"TODO\", float_format=\"%.3f\", position=\"h\", index=False, escape=False)\n",
-      "/tmp/ipykernel_212821/4062287807.py:13: FutureWarning: In future versions `DataFrame.to_latex` is expected to utilise the base implementation of `Styler.to_latex` for formatting and rendering. The arguments signature may therefore change. It is recommended instead to use `DataFrame.style.to_latex` which also contains additional functionality.\n",
-      "  df.to_latex(file_name, column_format=\">{\\\\bfseries}c|\" + (len(df.columns)-1) * \"c\", multicolumn_format=\"c\", caption=\"TODO\", label=\"TODO\", float_format=\"%.3f\", position=\"h\", index=False, escape=False)\n",
-      "/tmp/ipykernel_212821/4062287807.py:13: FutureWarning: In future versions `DataFrame.to_latex` is expected to utilise the base implementation of `Styler.to_latex` for formatting and rendering. The arguments signature may therefore change. It is recommended instead to use `DataFrame.style.to_latex` which also contains additional functionality.\n",
-      "  df.to_latex(file_name, column_format=\">{\\\\bfseries}c|\" + (len(df.columns)-1) * \"c\", multicolumn_format=\"c\", caption=\"TODO\", label=\"TODO\", float_format=\"%.3f\", position=\"h\", index=False, escape=False)\n",
-      "/tmp/ipykernel_212821/4062287807.py:13: FutureWarning: In future versions `DataFrame.to_latex` is expected to utilise the base implementation of `Styler.to_latex` for formatting and rendering. The arguments signature may therefore change. It is recommended instead to use `DataFrame.style.to_latex` which also contains additional functionality.\n",
-      "  df.to_latex(file_name, column_format=\">{\\\\bfseries}c|\" + (len(df.columns)-1) * \"c\", multicolumn_format=\"c\", caption=\"TODO\", label=\"TODO\", float_format=\"%.3f\", position=\"h\", index=False, escape=False)\n",
-      "/tmp/ipykernel_212821/4062287807.py:13: FutureWarning: In future versions `DataFrame.to_latex` is expected to utilise the base implementation of `Styler.to_latex` for formatting and rendering. The arguments signature may therefore change. It is recommended instead to use `DataFrame.style.to_latex` which also contains additional functionality.\n",
-      "  df.to_latex(file_name, column_format=\">{\\\\bfseries}c|\" + (len(df.columns)-1) * \"c\", multicolumn_format=\"c\", caption=\"TODO\", label=\"TODO\", float_format=\"%.3f\", position=\"h\", index=False, escape=False)\n",
-      "/tmp/ipykernel_212821/4062287807.py:13: FutureWarning: In future versions `DataFrame.to_latex` is expected to utilise the base implementation of `Styler.to_latex` for formatting and rendering. The arguments signature may therefore change. It is recommended instead to use `DataFrame.style.to_latex` which also contains additional functionality.\n",
-      "  df.to_latex(file_name, column_format=\">{\\\\bfseries}c|\" + (len(df.columns)-1) * \"c\", multicolumn_format=\"c\", caption=\"TODO\", label=\"TODO\", float_format=\"%.3f\", position=\"h\", index=False, escape=False)\n",
-      "/tmp/ipykernel_212821/4062287807.py:13: FutureWarning: In future versions `DataFrame.to_latex` is expected to utilise the base implementation of `Styler.to_latex` for formatting and rendering. The arguments signature may therefore change. It is recommended instead to use `DataFrame.style.to_latex` which also contains additional functionality.\n",
-      "  df.to_latex(file_name, column_format=\">{\\\\bfseries}c|\" + (len(df.columns)-1) * \"c\", multicolumn_format=\"c\", caption=\"TODO\", label=\"TODO\", float_format=\"%.3f\", position=\"h\", index=False, escape=False)\n",
-      "/tmp/ipykernel_212821/4062287807.py:13: FutureWarning: In future versions `DataFrame.to_latex` is expected to utilise the base implementation of `Styler.to_latex` for formatting and rendering. The arguments signature may therefore change. It is recommended instead to use `DataFrame.style.to_latex` which also contains additional functionality.\n",
-      "  df.to_latex(file_name, column_format=\">{\\\\bfseries}c|\" + (len(df.columns)-1) * \"c\", multicolumn_format=\"c\", caption=\"TODO\", label=\"TODO\", float_format=\"%.3f\", position=\"h\", index=False, escape=False)\n",
-      "/tmp/ipykernel_212821/4062287807.py:13: FutureWarning: In future versions `DataFrame.to_latex` is expected to utilise the base implementation of `Styler.to_latex` for formatting and rendering. The arguments signature may therefore change. It is recommended instead to use `DataFrame.style.to_latex` which also contains additional functionality.\n",
-      "  df.to_latex(file_name, column_format=\">{\\\\bfseries}c|\" + (len(df.columns)-1) * \"c\", multicolumn_format=\"c\", caption=\"TODO\", label=\"TODO\", float_format=\"%.3f\", position=\"h\", index=False, escape=False)\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "path = \".\"\n",
     "for filename in os.listdir(path):\n",
     "    f = os.path.join(path, filename)\n",
     "    if os.path.isfile(f) and \".csv\" in f:\n",
-    "        lul(f)"
+    "        create_latex_table(f)"
    ],
    "metadata": {
     "collapsed": false
@@ -82,20 +57,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "  PLACEHOLDER    C  Rust   Go  JavaScript\n0           C  0.0   1.0 -1.0        -1.0\n1        Rust -1.0   0.0 -1.0        -1.0\n2          Go  1.0   1.0  0.0        -1.0\n3  JavaScript  1.0   1.0  1.0         0.0",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>PLACEHOLDER</th>\n      <th>C</th>\n      <th>Rust</th>\n      <th>Go</th>\n      <th>JavaScript</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>C</td>\n      <td>0.0</td>\n      <td>1.0</td>\n      <td>-1.0</td>\n      <td>-1.0</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>Rust</td>\n      <td>-1.0</td>\n      <td>0.0</td>\n      <td>-1.0</td>\n      <td>-1.0</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>Go</td>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n      <td>-1.0</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>JavaScript</td>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>1.0</td>\n      <td>0.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
-    "df = pd.read_csv(\"/home/linus/Dokumente/Studium/Master/Amsterdam/Year_2/01_GreenLab/green-lab/analysis/fuck/hyp1_energy_usage.csv\").astype(float)\n",
+    "# requires file to be in cwd!\n",
+    "df = pd.read_csv(\"hyp1_energy_usage.csv\").astype(float)\n",
     "\n",
     "df.insert(0, \"PLACEHOLDER\", list(df.columns), True)\n",
     "df"
